fixed header overflow x axis

--- a/public/index.css
+++ b/public/index.css
@@ -1,9 +1,5 @@
 body {
   margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
   background-color: #f5f5f5;
 }
 
@@ -13,6 +9,6 @@ header a {
 
 @media only screen and (max-width: 600px) {
   header a {
-    padding: 0.6rem;
+    padding: 0.5rem;
   }
 }
